# copycat

./: .gitattributes  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  default.nix  flake.nix  inputs.nix  setup.cfg  setup.py  shell.nix  trap-dac-utils.nix  version.nix  versioneer.py
dax/: __init__.py  _version.py  experiment.py  program.py  scan.py  scheduler.py  servo.py
dax/applets/: live_plot.py  plot_hist.py  plot_xy.py  plot_xy_multi.py  plot_xy_nested.py  widget.py
dax/base/: __init__.py  base.py  control_flow.py  dax.py  detection_if.py  exceptions.py  global_beam_if.py  indv_beam_if.py  interface.py  program.py  scan.py  scheduler.py  servo.py  system.py  trap_if.py
dax/calibrate/: rtio_stress.py
dax/clients/: gtkwave.py  introspect.py  pmt_monitor.py  program.py  pygsti.py  rpc_benchmark.py  rtio_benchmark.py  rtio_stress.py  system_benchmark.py  vqe.py
dax/gateware/: euriqa.py  euriqa_pin_map.csv
dax/gateware/targets/: kasli.py  kc705.py
dax/interfaces/: data_context.py  detection.py  gate.py  operation.py
dax/modules/: beam_manager.py  chamber.py  cpld_init.py  detection.py  global_beam.py  hist_context.py  indv_beam.py  indv_beam_mems.py  led.py  mems_mirror.py  rpc_benchmark.py  rtio_benchmark.py  rtio_stress.py  safety_context.py  time_resolved_context.py  trap.py  trap_dc.py  trap_rf.py  trd_context.py  trs_context.py
dax/modules/interfaces/: detection_if.py  global_beam_if.py  indv_beam_if.py  trap_if.py
dax/scan/: scan.py
dax/services/: align_mems.py  load_ion.py  load_ions.py  safety_context.py  sampler.py
dax/sim/: __init__.py  ad9912.py  ad9914.py  config.py  core.py  ddb.py  device.py  dma.py  signal.py  sim.py  test_case.py  time.py  ttl.py
dax/sim/coredevice/: __init__.py  ad53xx.py  ad9910.py  ad9912.py  ad9914.py  adf5356.py  cache.py  comm_kernel.py  core.py  dma.py  dummy.py  edge_counter.py  generic.py  mirny.py  overlay.py  phaser.py  ttl.py  (+4 more)
dax/test/: code_style.py
dax/util/: artiq.py  artiq_helpers.py  artiq_version.py  ccb.py  configparser.py  convert.py  experiments.py  git.py  gtkwave.py  introspect.py  loader.py  logging.py  matplotlib_backend.py  moninj.py  output.py  sub_experiment.py  units.py
doc/: Makefile  shell.nix
doc/source/: conf.py  dax.base.rst  dax.clients.rst  dax.interfaces.rst  dax.modules.rst  dax.rst  dax.scan.rst  dax.services.rst  dax.sim.rst  dax.util.rst  index.rst
test/: __init__.py  artiq.py  attributes.py  code_style.py  environment.py  environment.yml  helpers.py  hw_testbench.py  shell.nix  test_artiq.py  test_attributes.py  test_code_style.py  test_package.py  timer.py
test/artiq/: kernel_test.py
test/base/: __init__.py  control_flow_test.py  dax.py  dax_.py  interface_test.py  program_test.py  scan_.py  scan_test.py  scheduler_.py  scheduler_test.py  servo_test.py  system_.py  system_test.py  test_program.py  test_scan.py  test_scheduler.py  test_system.py
test/clients/: __init__.py  build_client.py  build_client_test.py  pygsti_test.py  test_build_client.py  test_pygsti.py
test/hw_test/: __init__.py  benchmark_test.py  device_db.py  kernel_test.py  safety_context_test.py  scan_test.py  servo_test.py  trap_dc_test.py
test/interfaces/: data_context_test.py  gate_test.py  operation_test.py  test_data_context.py  test_operation.py
test/modules/: __init__.py  beam_manager.py  beam_manager_test.py  build_module.py  build_module_test.py  cpld_init.py  cpld_init_test.py  hist_context.py  hist_context_test.py  indv_beam_mems.py  led.py  led_test.py  rpc_benchmark.py  rpc_benchmark_test.py  rtio_benchmark.py  rtio_benchmark_test.py  safety_context.py  safety_context_test.py  test_beam_manager.py  test_build_module.py  test_cpld_init.py  test_hist_context.py  test_led.py  test_rpc_benchmark.py  test_rtio_benchmark.py  test_safety_context.py  test_time_resolved_context.py  time_resolved_context.py  time_resolved_context_test.py  trap_dc_test.py  trap_rf_test.py  trd_context.py
test/services/: safety_context_test.py
test/sim/: __init__.py  ddb.py  ddb_test.py  signal.py  signal_test.py  test_case.py  test_ddb.py  test_signal.py  test_time.py  time.py  time_test.py
test/stubs/: graphviz.pyi  natsort.pyi  numpy.pyi  sortedcontainers.pyi
test/util/: __init__.py  artiq.py  artiq_test.py  ccb.py  ccb_test.py  configparser_test.py  convert_test.py  experiments_test.py  git_test.py  gtkwave.py  gtkwave_test.py  introspect.py  introspect_test.py  loader_test.py  logging_test.py  output.py  output_test.py  sub_experiment_test.py  test_artiq.py  test_ccb.py  test_configparser.py  test_convert.py  test_experiments.py  test_gtkwave.py  test_introspect.py  test_logging.py  test_output.py  test_units.py  units.py  units_test.py
(+107 files in other folders)
