[metadata]
name = dax
author = Duke University
description = Duke ARTIQ Extensions
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
  # artiq  # Needs to be installed manually (see ARTIQ installation instructions)
  numpy
  scipy
  pyvcd
  natsort
  pygit2
  pyqt5
  pyqtgraph
  matplotlib
  graphviz

[options.packages.find]
exclude =
  *.test
  *.test.*
  test.*
  test

[versioneer]
VCS = git
style = pep440
versionfile_source = dax/_version.py
versionfile_build = dax/_version.py
tag_prefix = v
parentdir_prefix = dax-v

[pycodestyle]
max_line_length = 120

[mypy]
mypy_path = test/stubs/
files = dax/,test/
cache_dir = /dev/null
warn_unused_configs = True
warn_redundant_casts = True
show_error_context = True
show_error_codes = True

[mypy-dax.base.*,dax.sim.*,dax.util.*]
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True

[flake8]
ignore = F401, F403, F405, F821
max_line_length = 120
exclude = .git,__pycache__,build,dist,versioneer.py
count = True

[coverage:run]
source = dax/
omit = dax/_version.py
