[metadata]
name = dax
author = Duke University
description = Duke ARTIQ Extensions
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://gitlab.com/duke-artiq/dax

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
  trap-dac-utils
  artiq
  sipyco
  numpy
  scipy
  pyvcd
  natsort
  pygit2
  matplotlib
  graphviz
  h5py
  networkx
  sortedcontainers

[options.packages.find]
include = dax*

[tool:pytest]
minversion = 5.3
testpaths = test/
filterwarnings =
  ignore::DeprecationWarning:frozendict.*

[pycodestyle]
max_line_length = 120
exclude = .git,__pycache__,build,dist,versioneer.py,dax/_version.py
count = True

[mypy]
mypy_path = test/stubs/
files = dax/,test/
exclude = test/stubs/
python_version = 3.7
warn_unused_configs = True
warn_redundant_casts = True
show_error_context = True
show_error_codes = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_optional = True

[mypy-sipyco.*,h5py.*,pygit2.*,matplotlib.*,pygsti.*]
ignore_missing_imports = True

[mypy-dax._version]
ignore_errors = True

[mypy-dax.base.*,dax.interfaces.*,dax.sim.*,dax.util.*]
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_reexport = True

[flake8]
ignore = F403, F405, F821, W503
max_line_length = 120
exclude = .git,__pycache__,build,dist,versioneer.py,dax/_version.py
count = True
max-complexity = 15
no-untyped-args = True
no-untyped-return = True
per-file-ignores =
  dax/sim/coredevice/*:ATQ101,ATQ102,ATQ306,ATQ307,ATQ401
  test/*:ATQ

[coverage:run]
source = dax/
omit = dax/_version.py

[coverage:report]
precision = 2
